--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -57,8 +57,8 @@ button {
 }
 
 .uploadImg {
-  width: 713px;
-  height: 446px;
+  width: 100vw;
+  height: ~'calc(100vw * 446 / 713)';
   position: relative;
   img {
     width: 100%;
